# trukno_to_stix2

./: .gitignore  README.md  import_mitre_stix.py  process_trukno_ids.py  pyproject.toml  requirements.txt  swagger.json  taxii_push.py  test_id_consistency.py  trukno_api.py  trukno_stix_converter.py  trukno_stix_mapping.db  trukno_stix_mapping.md
data/: breach_67dc05458f5a820fd25fd5a0_20250413_135123.json  breach_67f7ed849653310e06650643_20250413_121421.json  breach_67f7ed849653310e06650643_20250413_122045.json
data/id_test_20250413_134946/run1/: 67dc05458f5a820fd25fd5a0_stix.json
data/id_test_20250413_134946/run2/: 67dc05458f5a820fd25fd5a0_stix.json
data/trukno_run_20250413_125250/67f7ed849653310e06650643/: 67f7ed849653310e06650643_stix.json
data/trukno_run_20250413_130141/67dc05458f5a820fd25fd5a0/: 67dc05458f5a820fd25fd5a0_stix.json
data/trukno_run_20250413_130141/67f7ed849653310e06650643/: 67f7ed849653310e06650643_stix.json
data/trukno_run_20250413_142154/67dc05458f5a820fd25fd5a0/: 67dc05458f5a820fd25fd5a0_stix.json
data/trukno_run_20250413_142154/67f7ed849653310e06650643/: 67f7ed849653310e06650643_raw.json  67f7ed849653310e06650643_stix.json
data/trukno_run_20250612_104506/67dc05458f5a820fd25fd5a0/: 67dc05458f5a820fd25fd5a0_raw_stix.json
data/trukno_run_20250612_104506/67f7ed849653310e06650643/: 67f7ed849653310e06650643_raw_stix.json
data/trukno_run_20250612_112643/67dc05458f5a820fd25fd5a0/: 67dc05458f5a820fd25fd5a0_stix.json
mitre_stix_data/: enterprise-attack-head.json
(+5 files in other folders)
